Example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-template-deployment
  labels:
    app: go-template
  namespace: go-template
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-template
  template:
    metadata:
      labels:
        app: go-template
    spec:
      containers:
        - name: go-template
          image: ghcr.io/gbaeke/go-template:0.0.2
          securityContext:
            runAsUser: 10000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
          args: ["--port=8080"]
          ports:
            - containerPort: 8080
          resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "64Mi"
                cpu: "250m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
              httpGet:
                path: /readyz
                port: 8080
              initialDelaySeconds: 5
              periodSeconds: 5
