Example/pod-toleration.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-toleration
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
      resources:
        limits:
          memory: '1Gi'
          cpu: '800m'
        requests:
          memory: '128Mi'
          cpu: '400m'
  tolerations:
    - key: "special"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
  nodeSelector:
    agentpool: "agentpool"
