Example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-template-service
  namespace: go-template
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: go-template
